--- a/website/src/assets/main.scss
+++ b/website/src/assets/main.scss
@@ -7,9 +7,13 @@
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
+  height: 100vh;
+  width: 100vw;
 }
 
 body {
-  background-color: black;
+  @apply bg-stone-800;
   color: white;
+  height: 100vh;
+  width: 100vw;
 }
